render veinmaker lines, better pillar targeting and types